# wiki-clone

./: .gitignore  README.md  pyproject.toml
encyclopedia/: urls.py  util.py  views.py
encyclopedia/templates/encyclopedia/: create.html  edit.html  entry.html  layout.html  search.html
entries/: test.md
