[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Asif Ally <asifally004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
markdown2 = "^2.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
